# optimal-sliding-puzzle

./: .gitignore  .gitlab-ci.yml  .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  build.zig  readme.md  zig.sh
.devcontainer/: devcontainer.json
markov/: 4.zig  action.zig  packed.zig
src/: action.rs  apdb.rs  hasher.rs  instances.rs  lib.rs  main.rs  markov.rs  search.rs  state.rs  test.rs
src/markov/: action.rs  instances.rs  state.rs  test.rs
src/search/: astar.rs  ch_nbs.rs  dibbs.rs  idastar.rs  idastar_bpmx.rs  test.rs
src/todo/: apdb.rs
