[package]
name = "astar"
version = "0.1.0"
authors = ["gun"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rand"]

[dependencies]
rand = { version = "0.8.2", optional = true, features = ["small_rng"] }

[dev-dependencies]
quickcheck = "1.0.2"